[gd_scene load_steps=8 format=3 uid="uid://c72gxk6ajrhcq"]

[ext_resource type="Script" path="res://player.gd" id="1_atejx"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://assets/characters/happy_boo/happy_boo.tscn" id="2_6rn2g"]
[ext_resource type="Script" path="res://Camera.gd" id="3_edrx6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mk4h1"]
radius = 15.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kyr01"]
radius = 25.0
height = 76.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13a0j"]
bg_color = Color(0.286275, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyna5"]
bg_color = Color(0.411765, 0.686275, 0.137255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D" groups=["Players"]]
collision_mask = 7
script = ExtResource("1_atejx")

[node name="PrimarySlot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -35)

[node name="SecondarySlot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(24, -4)

[node name="MajorSupportSlot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-44, -24)

[node name="MinorSupportSlot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-37, -6)

[node name="HappyBoo" parent="." instance=ExtResource("2_6rn2g")]
unique_name_in_owner = true
position = Vector2(0, 22)

[node name="ThrowableSlot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-19, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mk4h1")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 22)
script = ExtResource("3_edrx6")

[node name="HurtBox" type="Area2D" parent="." groups=["PlayerArea"]]
unique_name_in_owner = true
position = Vector2(0, 22)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kyr01")
debug_color = Color(0.976471, 0, 0.415686, 0.419608)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -69.0
offset_top = -97.0
offset_right = 69.0
offset_bottom = -79.0
theme_override_styles/background = SubResource("StyleBoxFlat_13a0j")
theme_override_styles/fill = SubResource("StyleBoxFlat_vyna5")
value = 100.0
show_percentage = false
